# p17

./: Makefile  README  tw-exact  tw-heuristic
gala/: .travis.yml  INSTALL  Makefile  README  TODO  boost.h  boost_assign.h  boost_copy.h  boost_detail.h  cbset.h  configure  degs.h  digraph.h  graph.h  immutable.h  sethack.h  sfinae.h  td.h  trace.h  traits.h  treedec.h
gala/examples/: alloc.hpp  ssg16i.h  ssg16ia.h  ssg32i.h  ssg_random.h  svbs.h  svbs_random.h
gala/tests/: Makefile  bmd.cc  concepts.cc  copy.cc  copy2.cc  copy3.cc  count.cc  count_adj.cc  dir.cc  edg.cc  idmap.cc  iter.cc  move.cc  pmap.cc  rewire.cc  sfinae.cc  view.cc
tdlib/: .travis.yml  Makefile.am  TODO  configure.ac
tdlib/grtd/: Makefile.am  bmd.h  dumptd.h  fi.h  grparse.h  grtd.cc  msvs.h  p17.h  ta_thread.h  tw-exact.cc
tdlib/pytdlib/: Makefile.am  graphs.py  python_tdlib.cpp  python_tdlib.hpp  tdlib.pxd  tdlib.pyx
tdlib/pytdlib/tests/: Makefile.am  dclc_G5.py  test_lb.py  test_long_pp_CFGs.py  test_misc.py  test_pre.py
tdlib/src/: Makefile.am  algo.hpp  bucket_sorter.hpp  combinations.hpp  config_traits.hpp  container.hpp  container_traits.hpp  convenience.hpp  copy.hpp  debucket_sorter.hpp  degree.hpp  degree_config.hpp  directed_view.hpp  elimination_orderings.hpp  exact.hpp  exact_cutset.hpp  exact_ta.hpp  exception.hpp  fill.hpp  frontend.hpp  generic_base.hpp  generic_elimination_search.hpp  generic_elimination_search_configs.hpp  generic_elimination_search_overlay.hpp  graph.hpp  graph_traits.hpp  induced_subgraph.hpp  iter.hpp  lower_bounds.hpp  marker.hpp  marker_util.hpp  minimum_degree_ordering.hpp  misc.hpp  network_flow.hpp  nice_decomposition.hpp  numbering.hpp  overlay.hpp  postprocessing.hpp  preprocessing.hpp  preprocessing_old.hpp  (+12 more)
tdlib/src/bits/: Makefile.am  trie.hpp
tdlib/src/impl/: greedy_base.hpp  greedy_heuristic.hpp
tdlib/tests/: Makefile.am  bmd.cpp  bucket_sorter_1.cpp  bucket_sorter_2.cpp  dfs.cpp  gala_bmd.cpp  gala_hw.cpp  onion.cpp  svbs_random.cpp  svbs_random.h  vec2tree.cpp
