SUBDIRS = \
  impl

SUBDIRS = impl

pkginclude_HEADERS = \
  algo.hpp \
  applications.hpp \
  branch_decomposition.hpp \
  bucket_sorter.hpp \
  bucket_sorter_bits.hpp \
  combinations.hpp \
  config_traits.hpp \
  container_traits.hpp \
  container.hpp \
  copy.hpp \
  degree.hpp \
  degree_config.hpp \
  directed_view.hpp \
  dynamicCR.hpp \
  elimination_orderings.hpp \
  error.hpp \
  exact.hpp \
  exact_cutset.hpp \
  fill.hpp \
  graph.hpp \
  iter.hpp \
  numbering.hpp \
  marker.hpp \
  graph_traits.hpp \
  lower_bounds.hpp \
  minimum_degree_ordering.hpp \
  misc.hpp \
  network_flow.hpp \
  nice_decomposition.hpp \
  noboost.hpp \
  overlay.hpp \
  platform.hpp \
  postprocessing.hpp \
  preprocessing.hpp \
  printer.hpp \
  random_generators.hpp \
  random.hpp \
  separator_algorithm.hpp \
  simple_graph_algos.hpp \
  tuple_td.hpp \
  trace.hpp \
  timer.hpp \
  upper_bounds.hpp \
  graph.hpp \
  minimum_degree_ordering.hpp \
  treedec.hpp \
  treedec_traits.hpp \
  treedec_misc.hpp \
  upper_bounds.hpp

EXTRA_DIST = \
  minimum_degree_ordering.hpp.orig \
  bucket_sorter.hpp.orig \
  random_generators.hpp \
  overlay.hpp \
  validation.hpp \
  graph_traits.hpp \
  convenience.hpp
